--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Dusko Bajic
 description: 'Android Developer. Gadget dependent. Music addicted.'
 url: 'http://bajicdusko.com'
-baseurl: '/'
-root: '/'
+baseurl: '//'
 google_analytics: 'UA-34206359-1'
 disqus_shortname: 'bajicdusko'
 
