--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Dusko Bajic
 description: 'Android Developer. Gadget dependent. Music addicted.'
 url: 'http://bajicdusko.com'
-baseurl: '//'
+baseurl: '/'
 google_analytics: 'UA-34206359-1'
 disqus_shortname: 'bajicdusko'
 
