--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Dusko Bajic
 description: 'Android Developer. Gadget dependent. Music addicted.'
-url: 'http://bajicdusko.com'
-baseurl: '/'
+url: 'http://bajicdusko.com/'
+baseurl: ''
 google_analytics: 'UA-34206359-1'
 disqus_shortname: 'bajicdusko'
 
