Reverted url to custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ tagline: Android  ●  .NET  ●  AWS  ●  Photography
 
 description: >-
   Software engineer. Enjoys in DevOps, proficient in development.
-url: 'https://bajicdusko.github.io'
+url: 'https://dusko.dev'
 author: Duško Bajić
 avatar: /assets/img/profile.jpg   # support internet resources
 lang: en_US
