--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ google_analytics:
 
 disqus:
   comments: true
-  shortname: 'dusko.dev'
+  shortname: 'duskodev'
 
 
 # Prefer color scheme setting, available values:
@@ -67,7 +67,7 @@ disqus:
 theme_mode: dual
 
 # boolean type, global switch for ToC in posts.
-toc: true
+toc: false
 
 paginate: 10
 
@@ -97,7 +97,7 @@ defaults:
     values:
       layout: post
       comments: true    # Enable comments in posts.
-      toc: true         # Display TOC column in posts.
+      toc: false         # Display TOC column in posts.
       location: Post
       breadcrumb:
         -
