[Automation] Updated the Lastmod for post(s).

--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,4 +1,7 @@
 -
+  filename: 'moving-away-from-google-services'
+  lastmod: '2020-06-07 23:28:56 +0200'
+-
   filename: 'android-testing-aws-device-farm-vs-firebase-test-lab'
   lastmod: '2020-06-04 00:32:29 +0200'
 -
