--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,4 +1,7 @@
 -
+  filename: 'home-nas-as-nextcloud-external-storage'
+  lastmod: '2020-06-24 01:07:56 +0200'
+-
   filename: 'moving-away-from-google-services'
   lastmod: '2020-06-17 22:36:04 +0200'
 -
